# ray

./: .gitmodules  CMakeLists.txt  install-dependencies.sh  setup-env.sh
doc/: conf.py  install-on-macosx.md  install-on-ubuntu.md
docker/deploy/: Dockerfile
docker/devel/: Dockerfile
docker/test-base/: Dockerfile
include/ray/: logging.h
lib/python/ray/: __init__.py  object_id.py  redis_logger.py  scheduler.py  serialization.py  services.py  worker.py
scripts/: default_worker.py
src/: objstore.cc  raylib.cc  scheduler.cc  worker.cc
test/: runtest.py
test/travis-ci/: install.sh
